# tosca

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deny.toml
.github/: dependabot.yml
ascot-axum/: Cargo.toml  README.md
ascot-axum/devices/fridge/: Cargo.toml  README.md
ascot-axum/devices/fridge/src/: fridge_mockup.rs  main.rs
ascot-axum/devices/ip-camera/: Cargo.toml  README.md
ascot-axum/devices/ip-camera/src/: main.rs  screenshot.rs
ascot-axum/devices/light/: Cargo.toml  README.md
ascot-axum/devices/light/src/: light_mockup.rs  main.rs
ascot-axum/examples/fridge/: Cargo.toml  README.md
ascot-axum/examples/fridge/src/: dummy_fridge.rs  main.rs
ascot-axum/examples/ip-camera/src/: info.rs  main.rs  parameters.rs  stream.rs
ascot-axum/examples/light/: Cargo.toml  README.md
ascot-axum/examples/light/src/: dummy_light.rs  main.rs
ascot-axum/src/: device.rs  error.rs  lib.rs  output_type.rs  server.rs  service.rs
ascot-axum/src/actions/: empty.rs  error.rs  info.rs  mod.rs  ok.rs  serial.rs  stream.rs
ascot-axum/src/devices/: fridge.rs  light.rs  mod.rs
ascot-axum/src/services/: mdns_sd.rs  mod.rs
ascot-controller/: Cargo.toml  README.md
ascot-controller/src/: controller.rs  device.rs  discovery.rs  error.rs  lib.rs  parameters.rs  policy.rs  request.rs  response.rs
ascot-controller/src/tests/: mod.rs
ascot-esp32c3/: Cargo.toml  README.md  sdkconfig.defaults
ascot-esp32c3-firmware/: Cargo.toml  build.rs  cfg.toml.example  http_server_page.html  rust-toolchain.toml
ascot-esp32c3-firmware/.cargo/: config.toml
ascot-esp32c3-firmware/src/: device.rs  main.rs  server.rs  wifi.rs
ascot-esp32c3/.cargo/: config.toml
ascot-esp32c3/devices/light/: Cargo.toml  README.md  build.rs  partitions.csv  sdkconfig.defaults
ascot-esp32c3/devices/light/src/: main.rs
ascot-esp32c3/examples/light/: Cargo.toml  README.md
ascot-esp32c3/examples/light/src/: main.rs
ascot-esp32c3/light/: Cargo.toml  build.rs
ascot-esp32c3/light/src/: main.rs
ascot-esp32c3/src/: device.rs  error.rs  lib.rs  server.rs  service.rs  wifi.rs
ascot-esp32c3/src/devices/: light.rs
ascot-os/: Cargo.toml  README.md
ascot-os/examples/fridge/: Cargo.toml  README.md
ascot-os/examples/fridge/src/: main.rs
ascot-os/examples/ip-camera/: Cargo.toml  README.md
ascot-os/examples/ip-camera/src/: info.rs  main.rs  parameters.rs  screenshot.rs  stream.rs
ascot-os/examples/light/: Cargo.toml  README.md
ascot-os/examples/light/src/: light_mockup.rs  main.rs
ascot-os/src/: device.rs  error.rs  lib.rs
ascot-os/src/actions/: error.rs  info.rs  mod.rs  serial.rs  stream.rs
ascot-os/src/devices/: fridge.rs  light.rs
ascot-stack/: Cargo.toml  README.md
ascot-stack/src/: device.rs  economy.rs  energy.rs  hazards.rs  lib.rs  response.rs  route.rs
crates/ascot/: Cargo.toml
crates/ascot-controller/: Cargo.toml
crates/ascot-controller/src/: controller.rs  device.rs  discovery.rs  parameters.rs  request.rs  response.rs  scheduler.rs
crates/ascot-controller/src/tests/: mod.rs
crates/ascot-esp32c3/: Cargo.toml  README.md
crates/ascot-esp32c3/examples/light/: Cargo.toml  README.md  build.rs  cfg.toml.example  espflash.toml  rust-toolchain.toml  sdkconfig.defaults
crates/ascot-esp32c3/examples/light-with-state/: .gitignore  Cargo.toml  README.md
crates/ascot-esp32c3/examples/light-with-state/src/: main.rs
crates/ascot-esp32c3/src/: device.rs  error.rs  lib.rs  mdns.rs  response.rs  server.rs  service.rs  wifi.rs
crates/ascot-esp32c3/src/devices/: light.rs
crates/ascot-os/: Cargo.toml
crates/ascot-os/examples/fridge/: Cargo.toml  README.md
crates/ascot-os/examples/ip-camera/: Cargo.toml  README.md
crates/ascot-os/examples/light/: Cargo.toml  README.md
crates/ascot-os/src/: device.rs  error.rs  lib.rs  mac.rs  server.rs  service.rs
crates/ascot-os/src/actions/: error.rs  info.rs  mod.rs  ok.rs  serial.rs  stream.rs
crates/ascot-os/src/devices/: fridge.rs  light.rs  mod.rs
crates/ascot-os/src/services/: mod.rs
crates/ascot-sensors/: Cargo.toml  README.md
crates/ascot-sensors/docs/: am312.md  bh1750.md  dht22.md  ds18b20.md
crates/ascot-sensors/src/: am312.rs  bh1750.rs  dht22.rs  ds18b20.rs  lib.rs
crates/ascot-stack/: Cargo.toml
crates/ascot-stack/src/: device.rs  economy.rs  energy.rs  hazards.rs  lib.rs  parameters.rs  response.rs  route.rs
crates/ascot-stack/src/utils/: map.rs  mod.rs  set.rs
crates/ascot/src/: actions.rs  device.rs  economy.rs  energy.rs  hazards.rs  lib.rs  macros.rs  parameters.rs  response.rs  route.rs
crates/ascot/src/collections/: map.rs  maps.rs  mod.rs  set.rs  sets.rs
crates/ascot/src/macros/: map.rs
crates/tosca/: Cargo.toml
crates/tosca-controller/: Cargo.toml  README.md
crates/tosca-controller/examples/events-controller/: Cargo.toml  README.md
crates/tosca-controller/examples/events-receiver/: Cargo.toml  README.md
crates/tosca-controller/examples/events-receiver-with-sse/: Cargo.toml  README.md
crates/tosca-controller/examples/events-with-sse/: Cargo.toml  README.md
crates/tosca-controller/src/: controller.rs  device.rs  discovery.rs  error.rs  events.rs  lib.rs  parameters.rs  policy.rs  request.rs  response.rs
crates/tosca-controller/src/tests/: mod.rs
crates/tosca-esp32c3/examples/light-with-state/: Cargo.toml  README.md  ascot-config.json  ascot-config.toml  ascot-config.yml  build.rs  cfg.toml.example
crates/tosca-os/: Cargo.toml  README.md
crates/tosca-os/examples/ip-camera/: Cargo.toml  README.md
crates/tosca-os/examples/light/: Cargo.toml  README.md
crates/tosca-os/src/: device.rs  error.rs  lib.rs  mac.rs  server.rs  service.rs
crates/tosca-os/src/actions/: info.rs  mod.rs  ok.rs  serial.rs  stream.rs
crates/tosca-os/src/devices/: light.rs
crates/tosca-os/src/responses/: error.rs  info.rs  mod.rs  ok.rs  serial.rs  stream.rs
crates/tosca-os/src/services/: mdns_sd.rs  mod.rs
crates/tosca/src/: device.rs  economy.rs  energy.rs  events.rs  hazards.rs  lib.rs  parameters.rs  response.rs  route.rs
crates/tosca/src/macros/: map.rs  mod.rs  set.rs
(+93 files in other folders)
