[workspace]
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/tosca",
    "crates/tosca-os",
    "crates/tosca-controller",
]
exclude = ["crates/tosca-esp32c3"]

[workspace.lints.clippy]
[workspace.dependencies]
hashbrown.version = "0.16"
hashbrown.default-features = false
hashbrown.features = ["default-hasher"]

indexmap.version = "2.10"
indexmap.default-features = false

mdns-sd.version = "0.16.0"
mdns-sd.default-features = false

serde.version = "1.0"
serde.default-features = false

serde_json.version = "1"
serde_json.default-features = false

tokio.version = "1.0"
tokio.default-features = false

tracing.version = "0.1"
tracing.default-features = false
