[package]
name = "ascot-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascot-library = { version = "0.1.0", path = "../" }
axum = "0.7.5"
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version =  "1", features = ["preserve_order"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3.18"

# Service dependencies
gethostname = { version = "0.4", optional = true }
if-addrs = { version = "0.11", optional = true }
mdns-sd = { version = "0.10", optional = true }

[features]
default = ["mdns-sd-service"]

# Services
mdns-sd-service = ["dep:mdns-sd", "dep:gethostname", "dep:if-addrs"]

[workspace]
members = ["examples/fridge", "examples/light"]

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
incremental = false
lto = 'fat'
# Optimize for binary size, but with loop vectorization.
opt-level = 's'
overflow-checks = false
