[package]
name = "ascot-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascot-library = { version = "0.1", path = "../" }
axum = "0.8.0"
# Just for the TryStream trait.
futures-core = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version =  "1", features = ["preserve_order"] }
tokio = "1.0"
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"

# Service dependencies
gethostname = { version = "0.5", optional = true }
if-addrs = { version = "0.13", optional = true }
mdns-sd = { version = "0.13", optional = true }

[dev-dependencies]
async-lock = "3.3"

[features]
default = ["mdns-sd-service"]

# Services
mdns-sd-service = ["dep:mdns-sd", "dep:gethostname", "dep:if-addrs"]
