[package]
name = "ascot-esp32c3"
version = "0.1.0"
edition = "2021"

[profile.release]
# Optimize for binary size, but with loop vectorization.
opt-level = "s"

[profile.dev]
# Enable debug symbols
debug = true
# Optimize for binary size, but also turn off loop vectorization.
opt-level = "z"

[dependencies]
anyhow = "1"
embedded-svc = { version = "0.27", default-features = false }
esp-idf-svc = "0.48.1"
heapless = "0.8.0"
log = { version = "0.4", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
toml-cfg = "0.2.0"

[build-dependencies]
embuild  = "0.31.4"
toml-cfg = "0.2.0"
