[package]
name = "ascot-esp32c3"
version = "0.1.0"
edition = "2021"

[dependencies]

# Esp
esp-idf-svc = "0.49.1"

# Mdns-sd
edge-mdns = "0.3"
edge-nal = { version = "0.3", default-features = false }
edge-nal-std = { version = "0.3", default-features = false }
embassy-sync = { version = "0.6", default-features = false }
embassy-time = { version = "0.3.2", features = ["std", "generic-queue-8"] }
rand = {version = "0.8.5", feature = ["std", "std_rng"] }

# Other dependencies
ascot-library = { path = "../" }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4", default-features = false }
