[package]
name = "ascot-esp32c3"
version = "0.1.0"
edition = "2021"

[dependencies]

# Esp
esp-idf-svc = "0.50.1"

# Mdns-sd
edge-mdns = "0.4.0"
edge-nal = { version = "0.4.2", default-features = false }
edge-nal-std = { version = "0.4.0", default-features = false }
embassy-sync = { version = "0.6", default-features = false }
embassy-time = { version = "0.3.2", features = ["std", "generic-queue-8"] }
rand = "0.8.5"

# Other dependencies
ascot-library = { path = "../", default-features = false, features = ["stack"] }
log = { version = "0.4", default-features = false }
serde_json = { version =  "1", features = ["preserve_order"] }
