[package]
name = "light"
version = "0.1.0"
edition = "2021"

[dependencies]
ascot-library = { version = "0.1.0", path = "../../" }
ascot-esp32c3 = { version = "0.1.0", path = "../" }
anyhow = "1"
embedded-svc = "0.28"
esp-idf-svc = "0.49.1"
toml-cfg = "0.2.0"

# Mdns-sd
edge-mdns = "0.3"
edge-nal = "0.3"
edge-nal-std = "0.3"
embassy-sync = "0.6"
embassy-time= { version = "0.3.2", features = ["std", "generic-queue-8"] }
futures-lite = "2.3.0"
log = "0.4"
rand = "0.8.5"

[build-dependencies]
embuild  = "0.32.0"
toml-cfg = "0.2.0"

[profile.dev]
# Enable debug symbols
debug = true
# Optimize for binary size, but also turn off loop vectorization.
opt-level = "z"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
# Optimize for binary size, but with loop vectorization.
opt-level = 's'
overflow-checks = false
