[package]
name = "ascot-controller"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "A controller to orchestrate Ascot devices in a network."
license = "MIT"

[dependencies]
ascot.path = "../ascot"
ascot.version = "0.1.0"
ascot.default-features = false

hashbrown.workspace = true

indexmap.workspace = true

log.workspace = true

mdns-sd.workspace = true

serde.workspace = true

serde_json.workspace = true
serde_json.features = ["alloc"]

tracing.workspace = true

bytes.version = "1.10.0"
bytes.default-features = false

futures-util.version = "0.3.31"
futures-util.default-features = false
futures-util.optional = true

reqwest.version = "0.12.12"
reqwest.default-features = false
reqwest.features = ["blocking", "json", "stream"]

[dev-dependencies]
ascot-os.path = "../ascot-os"
ascot-os.version = "0.1.0"
ascot-os.default-features = false

tokio.workspace = true
tokio.features = ["rt", "rt-multi-thread", "macros"]

serial_test.version = "3.2.0"
serial_test.default-features = false

tracing-subscriber.version = "0.3"

[features]
stream = ["dep:futures-util", "ascot/stream"]
default = ["stream"]
