[package]
name = "ascot-esp32c3"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "Ascot library crate for building ESP32-C3 boards firmware."
license = "MIT"

[dependencies]
ascot.version = "0.1.0"
ascot.path = "../ascot"

edge-mdns.version = "0.4.0"
edge-mdns.default-features = false
edge-mdns.features = ["io"]

edge-nal.version = "0.4.2"
edge-nal.default-features = false

edge-nal-std.version = "0.4.0"
edge-nal-std.default-features = false

embassy-sync.version = "0.6"
embassy-sync.default-features = false

embassy-time.version = "0.3.2"
embassy-time.default-features = false
embassy-time.features = ["generic-queue-8", "std"]

esp-idf-svc.version = "0.50.1"
esp-idf-svc.default-features = false
esp-idf-svc.features = ["alloc"]

log.version = "0.4"
log.default-features = false

rand.version = "0.8.5"

serde_json.version =  "1"
serde_json.default-features = false
serde_json.features = ["preserve_order"]
