[package]
name = "ascot-os"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "Ascot library for building firmware running on operating systems."
license = "MIT"

[dependencies]
ascot.version = "0.1.0"
ascot.path = "../ascot"

mdns-sd.workspace = true
mdns-sd.optional = true

serde.workspace = true
serde.features = ["derive"]

serde_json.workspace = true
serde_json.features = ["preserve_order"]

tokio.workspace = true

tracing.workspace = true

axum.version = "0.8.0"
axum.default-features = false
axum.features = ["tokio", "http1", "http2", "json"]

# Just for the TryStream trait.
futures-core.version = "0.3"

if-addrs.version = "0.13"
if-addrs.default-features = false
if-addrs.optional = true

tokio-util.version = "0.7"
tokio-util.default-features = false
tokio-util.features = ["io"]

[target.'cfg(windows)'.dependencies]
windows-sys.version = "0.60.2"
windows-sys.features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"]

[dev-dependencies]
async-lock.version = "3.3"
async-lock.default-features = false

[features]
default = ["mdns-sd-service"]

mdns-sd-service = ["dep:mdns-sd", "dep:if-addrs"]
