[package]
name = "ascot-os"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "Ascot library for building firmware running on operating systems."
license = "MIT"

[dependencies]
ascot.path = "../ascot"
ascot.version = "0.1.0"
ascot.default-features = false

axum.version = "0.8.0"
axum.default-features = false
axum.features = ["tokio", "http1", "http2", "json"]

# Just for the TryStream trait.
futures-core.version = "0.3"
futures-core.optional = true

if-addrs.version = "0.14"
if-addrs.default-features = false

log.workspace = true

mdns-sd.workspace = true

serde.workspace = true
serde.features = ["derive"]

serde_json.workspace = true
serde_json.features = ["preserve_order"]

tokio.workspace = true

tokio-util.version = "0.7"
tokio-util.default-features = false
tokio-util.features = ["io"]

tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.version = "0.61.0"
windows-sys.features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"]

[dev-dependencies]
async-lock.version = "3.3"
async-lock.default-features = false

[features]
stream = ["dep:futures-core", "ascot/stream"]
default = ["stream"]
