[package]
name = "ascot-sensors"
version = "0.1.0"
edition = "2024"
description = "A Rust library providing architecture-agnostic drivers for various sensors"
license = "MIT"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["embedded-hal-async"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = ["dht22", "bh1750", "am312", "ds18b20"]
dht22 = []
bh1750 = []
am312 = []
ds18b20 = []
