[package]
name = "ascot-stack"
version = "0.1.0"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
edition = "2024"
description = "Ascot communication interface for stack-oriented devices."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascot.version = "0.1.0"
ascot.path = "../ascot"
ascot.default-features = false

serde.workspace = true
serde.features = ["derive"]

heapless.version = "0.8.0"
heapless.default-features = false
heapless.features = ["serde"]

[dev-dependencies]
serde_json.workspace = true
serde_json.features = ["alloc"]
