[package]
name = "ascot"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "Ascot communication interface for general-purpose devices."
license = "MIT"

[dependencies]
indexmap.workspace = true
indexmap.optional = true

serde.workspace = true
serde.features = ["derive"]

serde_json.workspace = true
serde_json.features = ["alloc"]

[features]
# Preserve_order feature is mandatory and necessary for indexmap.
alloc = ["indexmap/serde", "serde_json/preserve_order"]
deserialize = []
default = ["alloc", "deserialize"]
