[package]
name = "ascot"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "Ascot communication interface for general-purpose devices."
license = "MIT"

[dependencies]
indexmap.workspace = true
indexmap.optional = true

serde.workspace = true
serde.features = ["derive", "alloc"]

serde_json.workspace = true
serde_json.features = ["alloc"]

hashbrown.version = "0.16"
hashbrown.default-features = false
hashbrown.features = ["default-hasher"]

[features]
alloc = ["indexmap/serde"]
default = ["alloc"]
