[package]
name = "ascot"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "Ascot communication interface for general-purpose devices."
license = "MIT"

[dependencies]
hashbrown.workspace = true

indexmap.workspace = true
indexmap.features = ["serde"]

log.workspace = true

serde.workspace = true
serde.features = ["derive", "alloc"]

serde_json.workspace = true
serde_json.features = ["alloc"]

[features]
stream = []
default = ["stream"]
