[package]
name = "tosca-controller"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "A controller to orchestrate Tosca devices in a network."
license = "MIT"

[dependencies]
tosca.path = "../tosca"
tosca.version = "0.1.0"

hashbrown.workspace = true

indexmap.workspace = true

log.workspace = true

mdns-sd.workspace = true

serde.workspace = true

serde_json.workspace = true
serde_json.features = ["alloc"]

tracing.workspace = true

bytes.version = "1.10.0"
bytes.default-features = false

flume.version = "0.11"
flume.default-features = false
flume.features = ["async"]

futures-util.version = "0.3.31"
futures-util.default-features = false
futures-util.optional = true

reqwest.version = "0.12.12"
reqwest.default-features = false
reqwest.features = ["blocking", "json", "stream"]

tokio.workspace = true
tokio.features = ["macros", "rt", "rt-multi-thread", "time"]

[dev-dependencies]
tosca-os.path = "../tosca-os"
tosca-os.version = "0.1.0"
tosca-os.default-features = false

serial_test.version = "3.2.0"
serial_test.default-features = false

tracing-subscriber.version = "0.3"

[features]
stream = ["dep:futures-util", "tosca/stream"]
default = ["stream"]
