[package]
name = "tosca"
version.workspace = true
edition.workspace = true
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "Tosca communication interface for general-purpose devices."
license.workspace = true

[dependencies]
hashbrown.workspace = true

indexmap.workspace = true
indexmap.features = ["serde"]

log.version = "0.4.27"

serde.workspace = true
serde.features = ["derive", "alloc"]

serde_json.workspace = true
serde_json.features = ["alloc"]

[features]
stream = []
deserialize = []
default = ["deserialize"]
