[package]
name = "ip-camera"
version = "0.1.0"
edition = "2021"

[dependencies]
async-lock = "3.3"
ascot-library = { version = "0.1", path = "../../../" }
ascot-axum = { version = "0.1", path = "../../" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Webcam framework
nokhwa = { version = "0.10", features = ["input-native", "serialize", "output-threaded"] }

# Image
[dependencies.image]
version = "0.25"
features = ["png"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"
