[package]
name = "ip-camera"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "An ip-camera implemented with the ascot-axum crate."
license = "MIT"
resolver = "2"
publish = false

[dependencies]
ascot-axum.version = "0.1"
ascot-axum.path = "../../"

ascot-library.version = "0.1"
ascot-library.path = "../../../"

async-lock.version = "3.3"
async-lock.default-features = false

clap.version = "4.5"
clap.default-features = false
clap.features = ["derive", "std"]

serde.version = "1.0"
serde.default-features = false
serde.features = ["derive"]

tokio.version = "1.0"
tokio.default-features = false
tokio.features = ["rt", "rt-multi-thread"]

tokio-stream.version = "0.1"
tokio-stream.default-features = false

tracing.version = "0.1"
tracing.default-features = false

tracing-subscriber.version = "0.3"
tracing-subscriber.default-features = false
tracing-subscriber.features = ["env-filter", "fmt", "std"]

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[dependencies.nokhwa]
version = "0.10"
default-features = false
features = ["input-native", "serialize", "output-threaded"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"
