[package]
name = "light"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-lock = "3.3.0"
ascot-library = { version = "0.1.0", path = "../../../" }
ascot-axum = { version = "0.1.0", path = "../../" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
