[package]
name = "light"
version = "0.1.0"
edition = "2021"

[dependencies]
ascot-library = { version = "0.1.0", path = "../../../" }
ascot-esp32c3 = { version = "0.1.0", path = "../../" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
toml-cfg = "0.2.0"

[build-dependencies]
embuild  = "0.32.0"
toml-cfg = "0.2.0"

[profile.dev]
# Enable debug symbols
debug = true
# Optimize memory
opt-level = 'z'
# Use lto
lto = 'fat'

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
# Optimize for binary size, but with loop vectorization.
opt-level = 's'
overflow-checks = false
strip = true
