[package]
name = "light"
version = "0.1.0"
edition = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "A light running on an ESP32-C3 microcontroller."
license = "MIT"
resolver = "2"
publish = false

[dependencies]
ascot-library.version = "0.1.0"
ascot-library.path = "../../../"

ascot-esp32c3.version = "0.1.0"
ascot-esp32c3.path = "../../"

esp-idf-svc.version = "0.50.1"

toml-cfg.version = "0.2.0"

[build-dependencies]
embuild.version  = "0.33.0"
toml-cfg.version = "0.2.0"

[profile.dev]
# Enable debug symbols
debug = true
# Optimize memory
opt-level = 'z'
# Use lto
lto = 'fat'

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
# Optimize for binary size, but with loop vectorization.
opt-level = 's'
overflow-checks = false
strip = true
