[package]
name         = "light-with-state"
version      = "0.1.0"
rust-version = "1.89"
edition      = "2024"
authors = ["Michele Valsesia <luni-4@hotmail.it>"]
description = "A simple stateful light for an ESP32-C3 board."
license = "MIT"

[dependencies]
tosca.version = "0.1.0"
tosca.path = "../../../tosca"

tosca-esp32c3.version = "0.1.0"
tosca-esp32c3.path = "../../"

# Embassy framework
embassy-executor.version = "0.7.0"
embassy-executor.features = ["log", "task-arena-size-65536"]

embassy-sync.version = "0.7.0"

embassy-time.version = "0.5.0"
embassy-time.features = ["log"]

# Esp dependencies
esp-alloc.version = "0.8.0"

esp-bootloader-esp-idf.version = "0.2.0"
esp-bootloader-esp-idf.features = ["esp32c3"] 

esp-hal.version = "=1.0.0-rc.0"
esp-hal.features = ["esp32c3", "log-04", "unstable"]

esp-hal-embassy.version = "0.9.0"
esp-hal-embassy.features = ["esp32c3", "log-04"]

esp-println.version = "0.15.0"
esp-println.features = ["esp32c3", "log-04"]

esp-wifi.version = "0.15.0"
esp-wifi.features = ["builtin-scheduler", "esp-alloc", "esp32c3", "log-04", "smoltcp", "wifi"]

# Logging utilities
log.version = "0.4.27"

# Static cell
static_cell.version = "2.1.1"
static_cell.features = ["nightly"]

# Toml dependency
toml-cfg.version = "0.2.0"
toml-cfg.default-features = false

[build-dependencies]
toml-cfg.version = "0.2.0"
toml-cfg.default-features = false

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
